--- a/application/services/flowmanager/package.json
+++ b/application/services/flowmanager/package.json
@@ -17,8 +17,12 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-winston": "^3.0.1",
     "mongoose": "^5.4.7",
+    "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
-    "typescript": "^3.2.4"
+    "typescript": "^3.2.4",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^3.6.0"
   }
 }
