--- a/application/services/flowmanager/Dockerfile
+++ b/application/services/flowmanager/Dockerfile
@@ -1,6 +1,6 @@
 From node:10.14.2
-COPY . /flow-service
-WORKDIR /flow-service 
+COPY . /flowmanager
+WORKDIR /flowmanager
 RUN npm i -g ts-node
 RUN npm install
-CMD npm run dev
+CMD npm run prod
