--- a/application/services/microflowmanager/Dockerfile
+++ b/application/services/microflowmanager/Dockerfile
@@ -1,6 +1,6 @@
 From node:10.14.2
-COPY . /micro-flow-service
-WORKDIR /micro-flow-service 
+COPY . /microflowmanager
+WORKDIR /microflowmanager 
 RUN npm install
 RUN npm i -g ts-node
-CMD npm run dev
+CMD npm run prod
