--- a/application/services/screenmanager/Dockerfile
+++ b/application/services/screenmanager/Dockerfile
@@ -1,6 +1,6 @@
 From node:10.14.2
-COPY . /screen-service
-WORKDIR /screen-service 
+COPY . /screenmanager
+WORKDIR /screenmanager
 RUN npm install
 RUN npm i -g ts-node
-CMD npm run dev
+CMD npm run prod
