--- a/application/services/flowmanager/package.json
+++ b/application/services/flowmanager/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flowmanager",
   "version": "1.0.0",
-  "description": "Flow Manager",
+  "description": "Flow Microservice",
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
