--- a/application/services/projectmanager/Dockerfile
+++ b/application/services/projectmanager/Dockerfile
@@ -1,6 +1,6 @@
 From node:10.14.2
-COPY . /project-service
-WORKDIR /project-service 
+COPY . /projectmanager
+WORKDIR /projectmanager 
 RUN npm install
 RUN npm i -g ts-node
-CMD npm run dev
+CMD npm run prod
