--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ dist/
 # profiling files
 chrome-profiler-events.json
 speed-measure-plugin.json
-package-lock.json
 # IDEs and editors
 /.idea
 .project
@@ -41,6 +40,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+node_modules/
 
 # System Files
 Thumbs.db
