--- a/application/services/projectmanager/tsconfig.json
+++ b/application/services/projectmanager/tsconfig.json
@@ -4,9 +4,10 @@
         "moduleResolution": "node",
         "pretty": true,
         "sourceMap": true,
-        "target": "es6",
+        "target": "es2017",
         "outDir": "./dist",
-        "baseUrl": "./lib"
+        "baseUrl": "./lib",
+        "alwaysStrict": true
     },
     "include": [
         "src/**/*.ts"
