--- a/devops/kubernetes/dev-ops/dev-ops-service.yaml
+++ b/devops/kubernetes/dev-ops/dev-ops-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: gep-dev-ops
   namespace: gep-dev-201902
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - name: jenkins
     port: 8080
