--- a/devops/kubernetes/system-entry-pod/system-entry-service.yaml
+++ b/devops/kubernetes/system-entry-pod/system-entry-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: gep-dev-system-entry
   namespace: gep-dev-201902
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - name: nginx-app
     port: 80
