--- a/devops/kubernetes/telimetry-pod/telimetry-service.yaml
+++ b/devops/kubernetes/telimetry-pod/telimetry-service.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: gep-dev-telimetry
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - name: vault
       targetPort: 8200
