--- a/application/clients/desktop/package.json
+++ b/application/clients/desktop/package.json
@@ -21,6 +21,7 @@
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "~7.1.0",
     "@angular/material": "^7.3.1",
     "@angular/platform-browser": "~7.1.0",
@@ -41,7 +42,6 @@
     "ng-multiselect-dropdown": "^0.2.3",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.4.0",
-    "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -65,7 +65,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tsickle": ">=0.29.0",
-    "tslib": "^1.9.0",
+    "tslib": "^1.9.3",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
   }
