--- a/generator/services/generationmanager/sourcecontrolmanager/tsconfig.json
+++ b/generator/services/generationmanager/sourcecontrolmanager/tsconfig.json
@@ -4,13 +4,15 @@
         "moduleResolution": "node",
         "pretty": true,
         "sourceMap": true,
-        "target": "es2017",
+        "resolveJsonModule": true,
+        "target": "es6",
         "outDir": "./dist",
         "baseUrl": "./lib",
-        "alwaysStrict": true
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true
     },
     "include": [
-        "src/**/*.ts"
+        "src/**/*.ts",
     ],
     "exclude": [
         "node_modules"
