--- a/generator/services/generationmanager/sourcecontrolmanager/package.json
+++ b/generator/services/generationmanager/sourcecontrolmanager/package.json
@@ -22,6 +22,9 @@
     "mongoose": "^5.4.7",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
+    "simple-git": "^1.107.0",
     "typescript": "^3.2.4",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
