code updated for flow

--- a/application/services/flowmanager/package.json
+++ b/application/services/flowmanager/package.json
@@ -23,6 +23,7 @@
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "typescript": "^3.2.4",
+    "uuid": "^3.3.2",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
   }
