--- a/application/services/entitymanager/Dockerfile
+++ b/application/services/entitymanager/Dockerfile
@@ -1,6 +1,6 @@
 From node:10.14.2
-COPY . /screenmanager
-WORKDIR /screenmanager
+COPY . /entitymanager
+WORKDIR /entitymanager
 RUN npm install
 RUN npm i -g ts-node
 CMD npm run prod
