--- a/application/services/featuremanager/Dockerfile
+++ b/application/services/featuremanager/Dockerfile
@@ -1,6 +1,6 @@
 From node:10.14.2
-COPY . /microflowmanager
-WORKDIR /microflowmanager 
+COPY . /featuremanager
+WORKDIR /featuremanager 
 RUN npm install
 RUN npm i -g ts-node
 CMD npm run prod
