--- a/application/services/entitymanager/package.json
+++ b/application/services/entitymanager/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.4.9",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
+    "ts-node": "^8.0.2",
     "typescript": "^3.3.1",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
