--- a/application/services/entitymanager/package.json
+++ b/application/services/entitymanager/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^1.18.9",
     "ts-node": "^8.0.2",
     "typescript": "^3.3.1",
+    "uuid": "^3.3.2",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
   }
