--- a/generator/services/deployment-manager/Dockerfile
+++ b/generator/services/deployment-manager/Dockerfile
@@ -1,4 +1,17 @@
 From node:10.14.2
+
+#terraform
+# RUN apt-get update && apt-get install -y \
+#     wget \
+#     unzip \
+#   && rm -rf /var/lib/apt/lists/*
+
+# RUN wget --quiet https://releases.hashicorp.com/terraform/0.11.3/terraform_0.11.3_linux_amd64.zip \
+#   && unzip terraform_0.11.3_linux_amd64.zip \
+#   && mv terraform /usr/bin \
+#   && rm terraform_0.11.3_linux_amd64.zip
+
+
 COPY . /deploymentmanager
 WORKDIR /deploymentmanager 
 RUN npm install
