entity data binding added for new screen designer

--- a/application/clients/desktop/package.json
+++ b/application/clients/desktop/package.json
@@ -43,10 +43,12 @@
     "i18next-browser-languagedetector": "^2.2.4",
     "i18next-sprintf-postprocessor": "^0.2.2",
     "i18next-xhr-backend": "^1.5.1",
+    "nanoid": "^2.0.1",
     "ng-multiselect-dropdown": "^0.2.3",
     "ngx-toastr": "^9.1.2",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.4.0",
+    "shortid": "^2.2.14",
     "socket.io": "^2.2.0",
     "zone.js": "~0.8.26"
   },
@@ -67,6 +69,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "nanoid-dictionary": "^2.0.0",
     "ng-packagr": "^4.2.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
