infra changes added

--- a/generator/services/deployment-manager/Dockerfile
+++ b/generator/services/deployment-manager/Dockerfile
@@ -1,15 +1,15 @@
 From node:10.14.2
 
-#terraform
-# RUN apt-get update && apt-get install -y \
-#     wget \
-#     unzip \
-#   && rm -rf /var/lib/apt/lists/*
+# terraform
+RUN apt-get update && apt-get install -y \
+    wget \
+    unzip \
+  && rm -rf /var/lib/apt/lists/*
 
-# RUN wget --quiet https://releases.hashicorp.com/terraform/0.11.3/terraform_0.11.3_linux_amd64.zip \
-#   && unzip terraform_0.11.3_linux_amd64.zip \
-#   && mv terraform /usr/bin \
-#   && rm terraform_0.11.3_linux_amd64.zip
+RUN wget --quiet https://releases.hashicorp.com/terraform/0.11.13/terraform_0.11.13_linux_amd64.zip \
+  && unzip terraform_0.11.13_linux_amd64.zip \
+  && mv terraform /usr/bin \
+  && rm terraform_0.11.13_linux_amd64.zip
 
 
 COPY . /deploymentmanager
