EFK changes for infra added

--- a/generator/services/infrastructure-manager/template/deployment/aws/telemetry-pod/EFK2/elasticsearch_pv.yaml
+++ b/generator/services/infrastructure-manager/template/deployment/aws/telemetry-pod/EFK2/elasticsearch_pv.yaml
@@ -1,8 +1,7 @@
-elasticsearch_pv_yaml(project_name) ::= <<
 kind: PersistentVolume
 apiVersion: v1
 metadata:
-  name: $project_name$-elasticsearch-data-pv
+  name: gep-dev-elasticsearch-data-pv
   labels:
     type: local
 spec:
@@ -12,4 +11,3 @@ spec:
     - ReadWriteOnce
   hostPath:
     path: /data/elasticsearch/
->>
