--- a/application/clients/desktop/package.json
+++ b/application/clients/desktop/package.json
@@ -39,12 +39,15 @@
     "core-js": "^2.5.4",
     "detect-browser": "^4.0.4",
     "express": "^4.16.4",
+    "fs": "0.0.1-security",
     "i18next": "^14.0.1",
     "i18next-browser-languagedetector": "^2.2.4",
     "i18next-sprintf-postprocessor": "^0.2.2",
     "i18next-xhr-backend": "^1.5.1",
+    "js-yaml": "^3.13.0",
     "nanoid": "^2.0.1",
     "ng-multiselect-dropdown": "^0.2.3",
+    "ng2-file-upload": "^1.3.0",
     "ngx-toastr": "^9.1.2",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.4.0",
