--- a/application/services/featuremanager/package.json
+++ b/application/services/featuremanager/package.json
@@ -18,7 +18,9 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
+    "js-yaml": "^3.13.0",
     "mongoose": "^5.4.7",
+    "multer": "^1.4.1",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "ts-node": "^8.0.2",
