--- a/application/services/featureflowmanager/package.json
+++ b/application/services/featureflowmanager/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "flowmanager",
+  "name": "featureflowmanager",
   "version": "1.0.0",
-  "description": "Flow Microservice",
+  "description": "Feature Flow Manager",
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,7 @@
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start"
   },
-  "author": "Rahul Tibrewal <rahul.tiberwal@10decoders.in>",
+  "author": "Udhaya <udhayakumar.m@10decoders.in>",
   "license": "",
   "dependencies": {
     "@types/express": "^4.16.1",
@@ -22,8 +22,8 @@
     "mongoose": "^5.4.7",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
+    "ts-node": "^8.0.2",
     "typescript": "^3.2.4",
-    "uuid": "^3.3.2",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
   }
