--- a/application/services/securitymanager/tsconfig.json
+++ b/application/services/securitymanager/tsconfig.json
@@ -1,23 +1,18 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "esModuleInterop": true,
-        "target": "es6",
-        "noImplicitAny": false,
         "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "sourceMap": true,
         "pretty": true,
-        "outDir": "dist",
-        "baseUrl": ".",
-        "paths": {
-            "*": [
-                "node_modules/*",
-                "src/types/*"
-            ]
-        }
+        "sourceMap": true,
+        "resolveJsonModule": true,
+        "target": "es6",
+        "outDir": "./dist",
+        "baseUrl": "./lib"
     },
     "include": [
-        "src/**/*"
+        "src/**/*.ts", "src/models/Role.ts" 
+    ],
+    "exclude": [
+        "node_modules"
     ]
 }
