add the feature id in entity

--- a/application/services/featuremanager/src/assests/featurefiles/ticketing-system.yaml
+++ b/application/services/featuremanager/src/assests/featurefiles/ticketing-system.yaml
@@ -525,7 +525,8 @@ feature-ticket:
       flow: GpUpdate
       controller: FeatureTicketController.updateFeatureTicket
       service: FeatureTicketService.updateFeatureTicket
-      dao: FeatureTicketdao.updateFeatureTicket
+      dao: FeatureTicketdao.updateFeatureTicket'
+      screen: "Ticket Details"
       api: /feature-ticket/update/:id
       method: put
       params:
