Login flow fix with Camunda.

--- a/application/services/securitymanager/package.json
+++ b/application/services/securitymanager/package.json
@@ -29,6 +29,7 @@
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "request": "^2.88.0"
   }
 }
