--- a/application/services/Auth-Proxy/package.json
+++ b/application/services/Auth-Proxy/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "apigateway",
+  "name": "auth-proxy",
   "version": "1.0.0",
-  "description": "Api Gateway",
+  "description": "\"Proxy to communicate between camunda\"",
   "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ng test",
     "build": "tsc",
     "dev": "ts-node ./src/server.ts",
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start"
   },
-  "author": "Rahul Tibrewal <rahul.tiberwal@10decoders.in>",
-  "license": "",
+  "author": "kishan.r10decoders@gmail.com",
+  "license": "ISC",
   "dependencies": {
     "@types/express": "^4.16.1",
     "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.5",
+    "csrf-token": "^1.1.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
+    "mongoose": "^5.4.7",
+    "node-fetch": "^2.3.0",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.5",
     "typescript": "^3.2.4",
+    "url-join": "^4.0.0",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "uuid": "^3.3.2",
+    "request": "^2.88.0"
   }
 }
