--- a/generator/services/backend-gen-manager/package.json
+++ b/generator/services/backend-gen-manager/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "codegenmanager",
+  "name": "backendgenmanager",
   "version": "1.0.0",
-  "description": "Code Generator Manager Microservice",
+  "description": "Backend Generator Microservice",
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,7 +10,7 @@
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start"
   },
-  "author": "Ram kumar <ramkumar.m@10decoders.in>",
+  "author": "udhaya kumar <udhayakumar.m@10decoders.in>",
   "license": "",
   "dependencies": {
     "@types/express": "^4.16.1",
@@ -21,7 +21,6 @@
     "express-winston": "^3.0.1",
     "http": "0.0.0",
     "mongoose": "^5.4.7",
-    "node-async-loop": "^1.2.2",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "socket.io": "^2.2.0",
