auto redeployment for geppetto application added

--- a/generator/services/deployment-manager/src/config/config.json
+++ b/generator/services/deployment-manager/src/config/config.json
@@ -13,5 +13,10 @@
     "KUBECONFIG": {
         "YAML": "./kube-config",
         "URL": ""
+    },
+    "GEPPETTO":{
+      "DEV":{
+          "URL":"./src/config/geppetto"
+      }
     }
 }
