--- a/generator/services/infrastructure-manager/package.json
+++ b/generator/services/infrastructure-manager/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/express": "^4.16.1",
     "body-parser": "^1.18.3",
+    "child_process": "^1.0.2",
     "class-validator": "^0.9.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
