--- a/application/clients/desktop/package.json
+++ b/application/clients/desktop/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@auth0/angular-jwt": "^2.1.0",
     "@ckeditor/ckeditor5-angular": "^1.0.1",
     "@ckeditor/ckeditor5-build-classic": "^11.2.0",
     "@ckeditor/ckeditor5-easy-image": "^10.0.4",
