--- a/devops/kubernetes/app-db-pod/app-db-service.yaml
+++ b/devops/kubernetes/app-db-pod/app-db-service.yaml
@@ -6,7 +6,7 @@ metadata:
  name: gep-dev-app-db
  namespace: gep-dev-201902
 spec:
- type: NodePort
+ type: LoadBalancer
  ports:
  - name: mongo-db
    port: 27017
