--- a/devops/kubernetes/app-pod/app-deployment.yaml
+++ b/devops/kubernetes/app-pod/app-deployment.yaml
@@ -11,14 +11,102 @@ spec:
         app: gep-dev-app
     spec:
       containers:
-        - name: node-container
+        - name: flowmanager-container
           imagePullPolicy: Always
-          image: tharanirajan/gep-dev-node-app:1.0
+          image: tharanirajan/gep-dev-flowmanager:1.0
           ports:
             - name: http-port
-              containerPort: 3000
+              containerPort: 3001
           env:
             - name: gep-dev-app-db
               value: gep-dev-app-db
             - name: VAULT_API
               value: "http://gep-dev-telimetry.gep-dev-201902.svc.cluster.local:8200"    
+        - name: microflowmanager-container
+          imagePullPolicy: Always
+          image: tharanirajan/gep-dev-microflowmanager:1.0
+          ports:
+            - name: http-port
+              containerPort: 3002
+          env:
+            - name: gep-dev-app-db
+              value: gep-dev-app-db
+            - name: VAULT_API
+              value: "http://gep-dev-telimetry.gep-dev-201902.svc.cluster.local:8200"
+        - name: projectmanager-container
+          imagePullPolicy: Always
+          image: tharanirajan/gep-dev-projectmanager:1.0
+          ports:
+            - name: http-port
+              containerPort: 3003
+          env:
+            - name: gep-dev-app-db
+              value: gep-dev-app-db
+            - name: VAULT_API
+              value: "http://gep-dev-telimetry.gep-dev-201902.svc.cluster.local:8200"
+        - name: screenmanager-container
+          imagePullPolicy: Always
+          image: tharanirajan/gep-dev-screenmanager:1.0
+          ports:
+            - name: http-port
+              containerPort: 3004
+          env:
+            - name: gep-dev-app-db
+              value: gep-dev-app-db
+            - name: VAULT_API
+              value: "http://gep-dev-telimetry.gep-dev-201902.svc.cluster.local:8200"
+        - name: entitymanager-container
+          imagePullPolicy: Always
+          image: tharanirajan/gep-dev-entitymanager:1.0
+          ports:
+            - name: http-port
+              containerPort: 3005
+          env:
+            - name: gep-dev-app-db
+              value: gep-dev-app-db
+            - name: VAULT_API
+              value: "http://gep-dev-telimetry.gep-dev-201902.svc.cluster.local:8200"
+        - name: featuremanager-container
+          imagePullPolicy: Always
+          image: tharanirajan/gep-dev-featuremanager:1.0
+          ports:
+            - name: http-port
+              containerPort: 3006
+          env:
+            - name: gep-dev-app-db
+              value: gep-dev-app-db
+            - name: VAULT_API
+              value: "http://gep-dev-telimetry.gep-dev-201902.svc.cluster.local:8200"
+        - name: securitymanager-container
+          imagePullPolicy: Always
+          image: tharanirajan/gep-dev-securitymanager:1.0
+          ports:
+            - name: http-port
+              containerPort: 3008
+          env:
+            - name: gep-dev-app-db
+              value: gep-dev-app-db
+            - name: VAULT_API
+              value: "http://gep-dev-telimetry.gep-dev-201902.svc.cluster.local:8200"
+        - name: camundamanager-container
+          imagePullPolicy: Always
+          image: tharanirajan/gep-dev-camundamanager:1.0
+          ports:
+            - name: http-port
+              containerPort: 3009
+          env:
+            - name: gep-dev-app-db
+              value: gep-dev-app-db
+            - name: VAULT_API
+              value: "http://gep-dev-telimetry.gep-dev-201902.svc.cluster.local:8200"
+        - name: proxymanager-container
+          imagePullPolicy: Always
+          image: tharanirajan/gep-dev-proxymanager:1.0
+          ports:
+            - name: http-port
+              containerPort: 3010
+          env:
+            - name: gep-dev-app-db
+              value: gep-dev-app-db
+            - name: VAULT_API
+              value: "http://gep-dev-telimetry.gep-dev-201902.svc.cluster.local:8200"
