--- a/devops/kubernetes/dev-ops-db/dev-ops-db-service.yaml
+++ b/devops/kubernetes/dev-ops-db/dev-ops-db-service.yaml
@@ -6,7 +6,7 @@ metadata:
   name: gep-dev-ops-db
   namespace: gep-dev-201902
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - name: sonar-postgres
       port: 5432
