--- a/devops/kubernetes/system-entry-pod/system-entry-service.yaml
+++ b/devops/kubernetes/system-entry-pod/system-entry-service.yaml
@@ -9,5 +9,10 @@ spec:
   - name: nginx-app
     port: 80
     targetPort: 80
+    nodePort: 30000
+  - name: apigateway-app
+    port: 3000
+    targetPort: 3000
+    nodePort: 30001
   selector:
     app: gep-dev-system-entry
