--- a/devops/kubernetes/telimetry-pod/EFK/elasticsearch_svc.yaml
+++ b/devops/kubernetes/telimetry-pod/EFK/elasticsearch_svc.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: elasticsearch
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: elasticsearch
   ports:
