--- a/application/clients/desktop/package.json
+++ b/application/clients/desktop/package.json
@@ -33,6 +33,7 @@
     "@ckeditor/ckeditor5-easy-image": "^10.0.4",
     "ag-grid-angular": "^20.0.0",
     "ag-grid-community": "^20.0.0",
+    "angular-6-social-login": "^1.1.1",
     "angular-i18next": "^5.0.6",
     "angular-validation-message": "^1.1.0",
     "angular-validation-message-i18next": "^1.1.0",
