--- a/application/services/securitymanager/package.json
+++ b/application/services/securitymanager/package.json
@@ -29,6 +29,8 @@
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
+    "node-async-loop": "^1.2.2",
     "uuid": "^3.3.2",
     "request": "^2.88.0"
   }
