--- a/devops/kubernetes/app-db-pod/app-db-deployment.yaml
+++ b/devops/kubernetes/app-db-pod/app-db-deployment.yaml
@@ -19,7 +19,7 @@ spec:
               containerPort: 27017
           volumeMounts:
             - name: mongo
-              mountPath: /data/db
+              mountPath: /data/db/
       volumes:
         - name: mongo
           persistentVolumeClaim:
