--- a/devops/kubernetes/app-db-pod/app-db-service.yaml
+++ b/devops/kubernetes/app-db-pod/app-db-service.yaml
@@ -6,10 +6,11 @@ metadata:
  name: gep-dev-app-db
  namespace: gep-dev-201902
 spec:
- type: LoadBalancer
+ type: NodePort
  ports:
  - name: mongo-db
    port: 27017
    targetPort: 27017
+   nodePort: 30027
  selector:
    name: gep-dev-app-db
