--- a/devops/kubernetes/dev-ops-db/dev-ops-db-service.yaml
+++ b/devops/kubernetes/dev-ops-db/dev-ops-db-service.yaml
@@ -6,10 +6,11 @@ metadata:
   name: gep-dev-ops-db
   namespace: gep-dev-201902
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - name: sonar-postgres
       port: 5432
       targetPort: 5432
+      nodePort: 30543
   selector:
     name: gep-dev-ops-db
