--- a/devops/kubernetes/telimetry-pod/EFK/elasticsearch_svc.yaml
+++ b/devops/kubernetes/telimetry-pod/EFK/elasticsearch_svc.yaml
@@ -6,11 +6,13 @@ metadata:
   labels:
     app: elasticsearch
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
     app: elasticsearch
   ports:
     - port: 9200
       name: rest
+      nodePort: 30092
     - port: 9300
       name: inter-node
+      nodePort: 30093
