--- a/devops/kubernetes/telimetry-pod/EFK/kibana.yaml
+++ b/devops/kubernetes/telimetry-pod/EFK/kibana.yaml
@@ -6,9 +6,10 @@ metadata:
   labels:
     app: kibana
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - port: 5601
+    nodePort: 30560
   selector:
     app: kibana
 ---
