--- a/devops/kubernetes/local/telimetry-pod/telimetry-deployment.yaml
+++ b/devops/kubernetes/local/telimetry-pod/telimetry-deployment.yaml
@@ -26,23 +26,23 @@ spec:
         env:
         - name: VAULT_DEV_ROOT_TOKEN_ID
           value: vault-geppetto-2019
-      # - name: prometheus-container
-      #   image: prom/prometheus:v2.1.0
-      #   args:
-      #     - "--config.file=/etc/prometheus/prometheus.yml"
-      #     - "--storage.tsdb.path=/prometheus/"
-      #   ports:
-      #     - containerPort: 9090
-      #   volumeMounts:
-      #     - name: prometheus-config-volume
-      #       mountPath: /etc/prometheus/
-      #     - name: prometheus-storage-volume
-      #       mountPath: /prometheus/    
-      # volumes:
-      #   - name: prometheus-config-volume
-      #     configMap:
-      #       defaultMode: 420
-      #       name: prometheus-server-conf
+      - name: prometheus-container
+        image: prom/prometheus:v2.1.0
+        args:
+          - "--config.file=/etc/prometheus/prometheus.yml"
+          - "--storage.tsdb.path=/prometheus/"
+        ports:
+          - containerPort: 9090
+        volumeMounts:
+          - name: prometheus-config-volume
+            mountPath: /etc/prometheus/
+          - name: prometheus-storage-volume
+            mountPath: /prometheus/    
+      volumes:
+        - name: prometheus-config-volume
+          configMap:
+            defaultMode: 420
+            name: prometheus-server-conf
   
-      #   - name: prometheus-storage-volume
-      #     emptyDir: {}        
+        - name: prometheus-storage-volume
+          emptyDir: {}        
