--- a/devops/kubernetes/telemetry-pod/telemetry-service.yaml
+++ b/devops/kubernetes/telemetry-pod/telemetry-service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: gep-dev-telimetry
+  name: gep-dev-telemetry
   namespace: gep-dev-201902
   labels:
-    app: gep-dev-telimetry
+    app: gep-dev-telemetry
 spec:
   type: NodePort
   ports:
@@ -17,4 +17,4 @@ spec:
       port: 9090
       nodePort: 30090  
   selector:
-    app: gep-dev-telimetry
+    app: gep-dev-telemetry
