--- a/generator/services/deployment-manager/src/config/geppetto/gep-dev-generater-deployment.yaml
+++ b/generator/services/deployment-manager/src/config/geppetto/gep-dev-generater-deployment.yaml
@@ -21,7 +21,7 @@ spec:
             - name: gep-dev-app-db
               value: gep-dev-app-db
             - name: VAULT_API
-              value: "http://gep-dev-telimetry.gep-dev-201902.svc.cluster.local:8200"
+              value: "http://gep-dev-telemetry.gep-dev-201902.svc.cluster.local:8200"
         - name: configurationmanager-container
           imagePullPolicy: Always
           image: tharanirajan/gep-dev-configmanager:1.0
@@ -32,7 +32,7 @@ spec:
             - name: gep-dev-app-db
               value: gep-dev-app-db
             - name: VAULT_API
-              value: "http://gep-dev-telimetry.gep-dev-201902.svc.cluster.local:8200"
+              value: "http://gep-dev-telemetry.gep-dev-201902.svc.cluster.local:8200"
         - name: redis-container
           image: redis
           resources:
