--- a/application/services/featuremanager/package.json
+++ b/application/services/featuremanager/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "microflowmanager",
+  "name": "featuremanager",
   "version": "1.0.0",
-  "description": "MicroFlow Microservice",
+  "description": "Feature manager",
   "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
