--- a/application/services/menubuildermanager/package.json
+++ b/application/services/menubuildermanager/package.json
@@ -10,7 +10,7 @@
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start"
   },
-  "author": "Rahul Tibrewal <udhayakumar.m@10decoders.in>",
+  "author": "Udhaya Kumar <udhayakumar.m@10decoders.in>",
   "license": "",
   "dependencies": {
     "@types/express": "^4.16.1",
