--- a/application/clients/desktop/package.json
+++ b/application/clients/desktop/package.json
@@ -46,7 +46,7 @@
     "i18next-browser-languagedetector": "^2.2.4",
     "i18next-sprintf-postprocessor": "^0.2.2",
     "i18next-xhr-backend": "^1.5.1",
-    "js-yaml": "^3.13.0",
+    "js-yaml": "^3.13.1",
     "nanoid": "^2.0.1",
     "ng-multiselect-dropdown": "^0.2.3",
     "ng2-file-upload": "^1.3.0",
@@ -58,10 +58,10 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.1",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular-devkit/build-ng-packagr": "~0.11.0",
     "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "~7.1.0",
+    "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "~7.1.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
