--- a/generator/services/deployment-manager/package.json
+++ b/generator/services/deployment-manager/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
     "fs-extra": "^7.0.1",
+    "jenkins": "^0.25.0",
     "js-yaml": "^3.12.2",
     "kubernetes-client": "^6.9.0",
     "mongoose": "^5.4.7",
