--- a/generator/services/backend-gen-manager/package.json
+++ b/generator/services/backend-gen-manager/package.json
@@ -27,5 +27,8 @@
     "typescript": "^3.2.4",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
+  },
+  "devDependencies": {
+    "node-async-loop": "^1.2.2"
   }
 }
