--- a/application/services/templatemanager/Dockerfile
+++ b/application/services/templatemanager/Dockerfile
@@ -1,6 +1,7 @@
 From node:10.14.2
 COPY . /templatemanager
-WORKDIR /templatemanager 
+WORKDIR /templatemanager
+Run rm -rf node_modules
 RUN npm install
 RUN npm i -g ts-node
 CMD npm run prod
