github manager changes

--- a/generator/services/github-manager/Dockerfile
+++ b/generator/services/github-manager/Dockerfile
@@ -1,6 +1,6 @@
 From node:10.14.2
-COPY . /sourcecontrolmanager
-WORKDIR /sourcecontrolmanager 
+COPY . /github-manager
+WORKDIR /github-manager 
 RUN npm install
 RUN npm i -g ts-node
 CMD npm run prod
