--- a/devops/helm/geppetto/values.yaml
+++ b/devops/helm/geppetto/values.yaml
@@ -12,8 +12,7 @@ logging:
 
 service:
   type: NodePort
-  appdb:
-    nodePort: 30027
+  appbuilderType: LoadBalancer
   systementry:
     port: 80
     nodePort: 31111
