--- a/devops/helm/geppetto/templates/app-db-pod/app-db-service.yaml
+++ b/devops/helm/geppetto/templates/app-db-pod/app-db-service.yaml
@@ -11,6 +11,6 @@ spec:
  - name: mongo-db
    port: 27017
    targetPort: 27017
-   nodePort: {{ .Values.service.appdb.nodePort }}
+   nodePort: 30027
  selector:
    name: {{ .Values.app.prefix }}-app-db
