--- a/devops/helm/geppetto/values.yaml
+++ b/devops/helm/geppetto/values.yaml
@@ -12,7 +12,7 @@ logging:
 
 service:
   type: NodePort
-  appbuilderType: LoadBalancer
+  appbuilderType: NodePort
   systementry:
     port: 80
     nodePort: 31111
