--- a/generator/services/seed/Auth-Proxy/package.json
+++ b/generator/services/seed/Auth-Proxy/package.json
@@ -20,21 +20,16 @@
     "csrf-token": "^1.1.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
-    "find": "^0.3.0",
-    "findit": "^2.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "make-dir": "^3.0.0",
-    "mkdirp": "^0.5.1",
     "mongoose": "^5.4.7",
     "node-fetch": "^2.3.0",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
-    "request": "^2.88.0",
-    "stringtemplate-js": "^0.1.1",
     "typescript": "^3.2.4",
     "url-join": "^4.0.0",
-    "uuid": "^3.3.2",
     "winston": "^3.2.1",
-    "winston-daily-rotate-file": "^3.6.0"
+    "winston-daily-rotate-file": "^3.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "uuid": "^3.3.2",
+    "request": "^2.88.0"
   }
 }
