--- a/generator/services/seed/Camunda/package.json
+++ b/generator/services/seed/Camunda/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "auth-proxy",
+  "name": "authorization",
   "version": "1.0.0",
-  "description": "\"Proxy to communicate between camunda\"",
+  "description": "Camunda DMN decision table",
   "main": "dist/server.js",
   "scripts": {
     "test": "ng test",
@@ -15,24 +15,16 @@
   "dependencies": {
     "@types/express": "^4.16.1",
     "body-parser": "^1.18.3",
-    "cheerio": "^1.0.0-rc.2",
     "cors": "^2.8.5",
-    "csrf-token": "^1.1.0",
     "express": "^4.16.4",
     "express-winston": "^3.0.1",
-    "find": "^0.3.0",
-    "findit": "^2.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "make-dir": "^3.0.0",
-    "mkdirp": "^0.5.1",
-    "mongoose": "^5.4.7",
-    "node-fetch": "^2.3.0",
+    "mongoose": "^5.4.9",
+    "node-async-loop": "^1.2.2",
     "node-vault": "^0.9.5",
     "nodemon": "^1.18.9",
     "request": "^2.88.0",
-    "stringtemplate-js": "^0.1.1",
+    "ts-node": "^8.0.2",
     "typescript": "^3.2.4",
-    "url-join": "^4.0.0",
     "uuid": "^3.3.2",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^3.6.0"
