--- a/generator/services/angular-gen-manager/package.json
+++ b/generator/services/angular-gen-manager/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.16.1",
+    "async-foreach": "^0.1.3",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
